@@ -224,12 +224,10 @@
                         <artifactId>maven-compiler-plugin</artifactId>
                         <version>${version.compiler.plugin}</version>
                         <configuration>
-                            <release>9</release>
                             <!-- fork is needed so compiler args can be used -->
                             <fork>true</fork>
                             <compilerArgs>
                                 <arg>-J--add-modules=java.xml.ws.annotation,jdk.jconsole</arg>
-                                <arg>--add-modules=jdk.jconsole</arg>
                             </compilerArgs>
                         </configuration>
                     </plugin>
